# india-trade-cli

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: build-mac.yml  ci.yml
agent/: core.py  deep_agent.py  harness.py  multi_agent.py  persona_agent.py  personas.py  prompts.py  quick_scan.py  schema_parser.py  schemas.py  tools.py  web_search.py
analysis/: dcf.py  fundamental.py  gex.py  multi_timeframe.py  options.py  pipeline.py  technical.py  volatility_surface.py
app/: main.py  repl.py
app/commands/: morning_brief.py  persona.py  strategy.py  trade.py
bot/: status.py  telegram_bot.py
brokers/: angelone.py  base.py  fyers.py  groww.py  mock.py  session.py  upstox.py  zerodha.py
config/: credentials.py
docker/: .env.example  Dockerfile  docker-compose.prod.yml  docker-compose.yml
engine/: alerts.py  audit.py  backtest.py  backtest_cache.py  backtest_report.py  backtest_vectorized.py  drift.py  event_strategies.py  greeks_manager.py  memory.py  options_backtest.py  output.py  pairs.py  paper.py  paper_execute.py  patterns.py  portfolio.py  profile.py  risk_gate.py  risk_gate_context.py  risk_limits.py  risk_metrics.py  search.py  simulator.py  skill_loader.py  strategy.py  strategy_builder.py  strategy_library.py  technical_library.py  tool_limiter.py  trade_executor.py  trader.py
engine/export/: pinescript.py
macos-app/: main.js  package-lock.json  package.json  tailwind.config.js
macos-app/renderer/: index.html  renderer.js  style.css
macos-app/scripts/: build-web.js
macos-app/src/__tests__/: parseCommand.test.js
macos-app/src/main/: index.js  sidecar.js
macos-app/src/preload/: index.js
macos-app/src/renderer/: index.html
macos-app/src/renderer/src/: App.jsx  index.css
macos-app/src/renderer/src/components/: SetupScreen.jsx
macos-app/src/renderer/src/components/Cards/: AlertsCard.jsx  HoldingsCard.jsx  MarkdownCard.jsx  MorningBriefCard.jsx  QuoteCard.jsx  RiskReportCard.jsx  StreamingAnalysisCard.jsx
macos-app/src/renderer/src/components/Chat/: ChatArea.jsx  Message.jsx
macos-app/src/renderer/src/components/Input/: InputBar.jsx
macos-app/src/renderer/src/components/Onboarding/: MarketDataStep.jsx  OnboardingWizard.jsx  ProviderStep.jsx  WelcomeStep.jsx
macos-app/src/renderer/src/components/Sidebar/: BrokerPanel.jsx  index.jsx
macos-app/src/renderer/src/hooks/: useAPI.js  useMarketClock.js
macos-app/src/renderer/src/store/: chatStore.js
market/: active_stocks.py  bulk_deals.py  disk_cache.py  earnings.py  events.py  flow_intel.py  gift_nifty.py  history.py  indices.py  macro.py  news.py  nse_scraper.py  oi_profile.py  options.py  options_scanner.py  quotes.py  sentiment.py  websocket.py  yfinance_provider.py
skills/: example_skill.py
tests/: conftest.py  test_59b_59c.py  test_agent_core.py  test_agent_tools.py  test_alerts_webhook.py  test_api_broker.py  test_backtest.py  test_backtest_report.py  test_backtest_vectorized.py  test_broker_quote_change.py  test_broker_roles.py  test_broker_routing_cli.py  test_bulk_deals.py  test_channel_prompting.py  test_context_injection.py  test_credentials.py  test_data_enrichment.py  test_data_fallback.py  test_dcf.py  test_dcf_improvements.py  test_dhan_broker.py  test_docker_config.py  test_dual_llm_routing.py  test_execution_routing.py  test_fundamental.py  test_fundamentals_scorer.py  test_fyers_quote.py  test_gift_nifty.py  test_greeks_manager.py  test_harness.py  test_hint_endpoint.py  test_market_sentiment.py  test_memory_timestamps.py  test_memory_verdict.py  test_ml_analyst.py  test_morning_brief_personal.py  test_multi_session.py  test_oauth_callback.py  test_onboarding.py  test_openclaw_125.py  (+30 more)
ui/: app.py
ui/widgets/: options_chain.py  portfolio.py  risk_meter.py
web/: api.py  auth.py  openclaw.py  skills.py
web/static/: auth.html  index.html
web/static/assets/: index-BPk7C_tJ.js  index-Bfxr-7ct.js  index-XKszU_hY.css
