[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-platform"
version = "0.1.0"
description = "Guided stock & options trading platform for Indian markets"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # ── Brokers ──────────────────────────────────────────────────────
    "kiteconnect>=4.2.0",
    "httpx>=0.27.0",
    "fyers-apiv3>=3.1.0",
    # ── AI ───────────────────────────────────────────────────────────
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "google-generativeai>=0.8.0",
    "google-cloud-aiplatform>=1.60.0",
    # ── Terminal UI ───────────────────────────────────────────────────
    "rich>=13.7.0",
    "textual>=0.80.0",
    "prompt_toolkit>=3.0.0",
    # ── Data & Analysis ───────────────────────────────────────────────
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "py_vollib>=1.0.1",
    "yfinance>=0.2.40",
    "feedparser>=6.0.11",
    "newsapi-python>=0.2.7",
    # ── Web ──────────────────────────────────────────────────────────
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    # ── Output ───────────────────────────────────────────────────────
    "fpdf2>=2.7.0",
    # ── Bot ──────────────────────────────────────────────────────────
    "python-telegram-bot>=21.0",
    # ── Auth & Utilities ─────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "keyring>=25.2.0",
    "pyotp>=2.9.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
]

# ── Optional broker SDKs (install separately if needed) ─────────────
# Angel One SmartAPI:  pip install smartapi-python logzero
# Note: smartapi-python is not on PyPI's standard index; install with:
#   pip install smartapi-python
# The brokers/angelone.py gracefully imports it at call-time.

[project.scripts]
trade = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["brokers*", "market*", "analysis*", "agent*", "engine*", "ui*", "app*", "web*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
